update 03 with relu but not work

--- a/digit_recognizer/03.ipynb
+++ b/digit_recognizer/03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,17 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "sd_scaler = StandardScaler()\n",
-    "X_train_small = sd_scaler.fit_transform(X_train_small)\n"
+    "# X_train_small = sd_scaler.fit_transform(X_train_small)\n",
+    "# X_test_small = sd_scaler.transform(X_test_small)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,16 +300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df_values = sd_scaler.fit_transform(test_df_values)"
+    "# test_df_values = sd_scaler.transform(test_df_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,19 +325,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sigmoid(z):\n",
-    "    return 1.0 / (1.0 + np.exp(-z))\n",
+    "#     return 1.0 / (1.0 + np.exp(-z))\n",
+    "    return z * (z > 0)\n",
     "def sigmoid_prime(z):\n",
-    "    return sigmoid(z) * (1 - sigmoid(z))"
+    "#     return sigmoid(z) * (1 - sigmoid(z))\n",
+    "    return 1.0 * (z > 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,8 +371,7 @@
     "        for j in range(epochs):\n",
     "            random.shuffle(training_data)\n",
     "            mini_batches = [\n",
-    "                training_data[k: k + mini_batch_size]\n",
-    "                for k in range(0, n, mini_batch_size)\n",
+    "                training_data[k: k + mini_batch_size] for k in range(0, n, mini_batch_size)\n",
     "            ]\n",
     "            for mini_batch in mini_batches:\n",
     "                self.update_mini_batch(mini_batch, eta)\n",
@@ -395,10 +397,6 @@
     "            a = sigmoid(np.dot(w, a) + b)\n",
     "        return a\n",
     "    \n",
-    "    def predict(self, X):\n",
-    "        X = []\n",
-    "        return np.argmax(X)\n",
-    "\n",
     "    def update_mini_batch(self, mini_batch, eta):\n",
     "        \"\"\"\n",
     "        梯度下降更新weights和biases， 用到backpropagation反向传播。\n",
@@ -461,55 +459,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 913 / 4200, Accuracy score: 0.21738095238095237\n",
-      "Epoch 1: 1403 / 4200, Accuracy score: 0.33404761904761904\n",
-      "Epoch 2: 1745 / 4200, Accuracy score: 0.4154761904761905\n",
-      "Epoch 3: 2057 / 4200, Accuracy score: 0.4897619047619048\n",
-      "Epoch 4: 2218 / 4200, Accuracy score: 0.5280952380952381\n",
-      "Epoch 5: 2396 / 4200, Accuracy score: 0.5704761904761905\n",
-      "Epoch 6: 2559 / 4200, Accuracy score: 0.6092857142857143\n",
-      "Epoch 7: 2571 / 4200, Accuracy score: 0.6121428571428571\n",
-      "Epoch 8: 2560 / 4200, Accuracy score: 0.6095238095238096\n",
-      "Epoch 9: 2627 / 4200, Accuracy score: 0.6254761904761905\n",
-      "Epoch 10: 2625 / 4200, Accuracy score: 0.625\n",
-      "Epoch 11: 2598 / 4200, Accuracy score: 0.6185714285714285\n",
-      "Epoch 12: 2594 / 4200, Accuracy score: 0.6176190476190476\n",
-      "Epoch 13: 2646 / 4200, Accuracy score: 0.63\n",
-      "Epoch 14: 2689 / 4200, Accuracy score: 0.6402380952380953\n",
-      "Epoch 15: 2667 / 4200, Accuracy score: 0.635\n",
-      "Epoch 16: 2721 / 4200, Accuracy score: 0.6478571428571429\n",
-      "Epoch 17: 2740 / 4200, Accuracy score: 0.6523809523809524\n",
-      "Epoch 18: 2747 / 4200, Accuracy score: 0.6540476190476191\n",
-      "Epoch 19: 2718 / 4200, Accuracy score: 0.6471428571428571\n",
-      "Epoch 20: 2757 / 4200, Accuracy score: 0.6564285714285715\n",
-      "Epoch 21: 2792 / 4200, Accuracy score: 0.6647619047619048\n",
-      "Epoch 22: 2783 / 4200, Accuracy score: 0.6626190476190477\n",
-      "Epoch 23: 2767 / 4200, Accuracy score: 0.6588095238095238\n",
-      "Epoch 24: 2787 / 4200, Accuracy score: 0.6635714285714286\n",
-      "Epoch 25: 2809 / 4200, Accuracy score: 0.6688095238095239\n",
-      "Epoch 26: 2796 / 4200, Accuracy score: 0.6657142857142857\n",
-      "Epoch 27: 2747 / 4200, Accuracy score: 0.6540476190476191\n",
-      "Epoch 28: 2784 / 4200, Accuracy score: 0.6628571428571428\n",
-      "Epoch 29: 2821 / 4200, Accuracy score: 0.6716666666666666\n"
+      "Epoch 0: 410 / 4200, Accuracy score: 0.09761904761904762\n",
+      "Epoch 1: 410 / 4200, Accuracy score: 0.09761904761904762\n",
+      "Epoch 2: 410 / 4200, Accuracy score: 0.09761904761904762\n",
+      "Epoch 3: 410 / 4200, Accuracy score: 0.09761904761904762\n",
+      "Epoch 4: 410 / 4200, Accuracy score: 0.09761904761904762\n",
+      "Epoch 5: 410 / 4200, Accuracy score: 0.09761904761904762\n",
+      "Epoch 6: 410 / 4200, Accuracy score: 0.09761904761904762\n",
+      "Epoch 7: 410 / 4200, Accuracy score: 0.09761904761904762\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-64-218fce09c9c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msizes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m784\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mnetwor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNetwork\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msizes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnetwor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSGD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-63-67fa2b988eb9>\u001b[0m in \u001b[0;36mSGD\u001b[0;34m(self, training_data, epochs, mini_batch_size, eta, test_data)\u001b[0m\n\u001b[1;32m     30\u001b[0m             ]\n\u001b[1;32m     31\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mmini_batch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmini_batches\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate_mini_batch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmini_batch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-63-67fa2b988eb9>\u001b[0m in \u001b[0;36mupdate_mini_batch\u001b[0;34m(self, mini_batch, eta)\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmini_batch\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m             \u001b[0mdelta_nabla_b\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelta_nabla_w\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackprop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m             \u001b[0mnabla_b\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mnb\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdnb\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mnb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdnb\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnabla_b\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelta_nabla_b\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m             \u001b[0mnabla_w\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mnw\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdnw\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mnw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdnw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnabla_w\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelta_nabla_w\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-63-67fa2b988eb9>\u001b[0m in \u001b[0;36mbackprop\u001b[0;34m(self, x, y)\u001b[0m\n\u001b[1;32m     80\u001b[0m         \"\"\"\n\u001b[1;32m     81\u001b[0m         \u001b[0mnabla_b\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mb\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbiases\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m         \u001b[0mnabla_w\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m         \u001b[0;31m# feedforward\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m         \u001b[0mactivation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-63-67fa2b988eb9>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     80\u001b[0m         \"\"\"\n\u001b[1;32m     81\u001b[0m         \u001b[0mnabla_b\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mb\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbiases\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m         \u001b[0mnabla_w\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m         \u001b[0;31m# feedforward\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m         \u001b[0mactivation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "sizes = [784, 50, 20, 10]\n",
+    "sizes = [784, 50, 10]\n",
     "networ = Network(sizes)\n",
     "networ.SGD(training_data, 30, 50, 0.5, test_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,17 +525,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ImageId = np.arange(1, 28001)\n",
-    "result = pd.DataFrame({\n",
-    "    \"ImageId\": ImageId,\n",
-    "    \"Label\": y\n",
-    "})\n",
-    "result.to_csv(\"result_03.csv\", index=False)\n",
+    "# ImageId = np.arange(1, 28001)\n",
+    "# result = pd.DataFrame({\n",
+    "#     \"ImageId\": ImageId,\n",
+    "#     \"Label\": y\n",
+    "# })\n",
+    "# result.to_csv(\"result_03.csv\", index=False)\n",
     "# dnn_clf.predict(test_tf_full_pipeline)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1 ,-1, 3]\n",
+    "b = [[1], [2], [3]]\n",
+    "sigmoid(np.dot(a, b) + 2)"
    ]
   },
   {
