--- a/digit_recognizer/04.ipynb
+++ b/digit_recognizer/04.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +124,95 @@
     "    x -= np.max(x)\n",
     "    sm = (np.exp(x).T / np.sum(np.exp(x),axis=1)).T\n",
     "    return sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def createWeightAndbiases():\n",
+    "    n_inputs = 28 * 28\n",
+    "    hidden1 = 30\n",
+    "    n_outputs = 10\n",
+    "    \n",
+    "    # layer1\n",
+    "    w1 = np.random.normal(0, n_inputs ** -0.5, [n_inputs, hidden1])\n",
+    "    b1 = np.random.normal(0, n_inputs ** -0.5, [1, hidden1])\n",
+    "    \n",
+    "    w2 = np.random.normal(0, hidden1 ** -0.5, [hidden1, n_outputs])\n",
+    "    b2 = np.random.normal(0, hidden1 ** -0.5, [1, n_outputs])\n",
+    "    \n",
+    "    return [w1, w2, b1, b2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dorpout\n",
+    "def Dropout(x, dropout_percent):\n",
+    "    data = [np.ones_like(x)]\n",
+    "    mask = np.random.binomial( data, (1 - dropout_percent) )[0] / (1 - dropout_percent)  \n",
+    "    return mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# predict\n",
+    "def predict(weights, X, dropout_percent=0):\n",
+    "    w1, w2, b1, b2 = weights\n",
+    "    \n",
+    "    first = Relu(np.dot(x, w1) + b1)\n",
+    "    \n",
+    "    return [first, Softmax(np.dot(first, w2) + b2)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 衡量精确度\n",
+    "def accuracy(output, y):\n",
+    "    hit = 0\n",
+    "    output = np.argmax(output, axis = 1)\n",
+    "    y = np.argmax(y, axis=1)\n",
+    "    for x, y in zip(output, y):\n",
+    "        if(x == y):\n",
+    "            hit += 1\n",
+    "    p = (hit * 100) / output.shape[0]\n",
+    "    return p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def log2(x):\n",
+    "    if x != 0:\n",
+    "        return np.log(x)\n",
+    "    else:\n",
+    "        return -np.inf\n",
+    "\n",
+    "def log(y):\n",
+    "    return [[log2(nx) for nx in x] for x in y]\n",
+    "\n",
+    "def cost(Y_predict, Y_right, weights, nabla):\n",
+    "    w1, w2, b1, b2 = weights\n",
+    "    weights_sum_square = np.mean(w1 ** 2) + np.mean(w2 ** 2)\n",
+    "    Loss = -np.mean(Y_right * log(Y_predict) + (1 - Y_right) * log(1 - Y_predict) + nabla / 2 * weights_sum_square)\n",
+    "    return Loss"
    ]
   },
   {
