--- a/digit_recognizer/05.ipynb
+++ b/digit_recognizer/05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,36 +15,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 整数与二进制转化\n",
     "int2binary = {}\n",
-    "binary_dim = 8"
+    "binary_dim = 9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [],
    "source": [
-    "largest_number = pow(2, binary_dim)"
+    "largest_number = pow(2, binary_dim)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [],
    "source": [
-    "binary = np.unpackbits(np.arange(largest_number, dtype=np.uint8).reshape(-1, 1), axis=1)"
+    "def int2bin(int_num):\n",
+    "    b_temp = bin(int_num)[2:]\n",
+    "    len_diff = binary_dim - len(b_temp)\n",
+    "    b_temp = '0' * len_diff + b_temp\n",
+    "    result =  [int(i) for i in b_temp]\n",
+    "    return result\n",
+    "\n",
+    "binary = np.array([ int2bin(i) for i in range(largest_number)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 429,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,20 +76,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 网络结构\n",
     "n_input = 2\n",
-    "hidden1 = 16\n",
+    "hidden1 = 10\n",
     "n_output = 1\n",
     "learning_rate = 0.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,46 +115,91 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0]]\n",
-      "[[0 0]]\n",
-      "[[0 0]]\n",
-      "[[0 0]]\n",
-      "[[1 0]]\n",
-      "[[1 1]]\n",
-      "[[1 1]]\n",
-      "[[1 1]]\n",
-      "loss:0.09470051311147264\n",
-      "Pred:[0 0 0 1 0 1 1 0]\n",
-      "Ture:[0 0 0 1 0 1 1 0]\n",
-      "15 + 7 = 22\n",
+      "loss:3.001913082171327\n",
+      "Pred:[1 1 1 1 1 1 1 1 1]\n",
+      "Ture:[1 0 1 0 0 0 0 0 1]\n",
+      "144 + 177 = 511\n",
+      "------------\n",
+      "loss:0.5325510875674059\n",
+      "Pred:[0 0 1 1 0 1 1 0 0]\n",
+      "Ture:[0 0 1 1 0 1 1 0 0]\n",
+      "35 + 73 = 108\n",
+      "------------\n",
+      "loss:0.04075378252840594\n",
+      "Pred:[0 1 1 1 0 1 1 1 0]\n",
+      "Ture:[0 1 1 1 0 1 1 1 0]\n",
+      "110 + 128 = 238\n",
+      "------------\n",
+      "loss:0.06316652304222073\n",
+      "Pred:[0 1 1 1 1 0 1 0 1]\n",
+      "Ture:[0 1 1 1 1 0 1 0 1]\n",
+      "167 + 78 = 245\n",
+      "------------\n",
+      "loss:0.014223047777372546\n",
+      "Pred:[1 0 1 1 1 1 1 1 0]\n",
+      "Ture:[1 0 1 1 1 1 1 1 0]\n",
+      "136 + 246 = 382\n",
+      "------------\n",
+      "loss:0.01819976310507199\n",
+      "Pred:[0 1 1 0 0 0 0 0 0]\n",
+      "Ture:[0 1 1 0 0 0 0 0 0]\n",
+      "74 + 118 = 192\n",
+      "------------\n",
+      "loss:0.007977758458200628\n",
+      "Pred:[1 0 0 1 1 0 0 1 0]\n",
+      "Ture:[1 0 0 1 1 0 0 1 0]\n",
+      "250 + 56 = 306\n",
+      "------------\n",
+      "loss:0.005118225895741682\n",
+      "Pred:[1 0 0 1 1 0 0 1 1]\n",
+      "Ture:[1 0 0 1 1 0 0 1 1]\n",
+      "90 + 217 = 307\n",
+      "------------\n",
+      "loss:0.005232591490953436\n",
+      "Pred:[0 1 0 1 1 1 0 0 0]\n",
+      "Ture:[0 1 0 1 1 1 0 0 0]\n",
+      "36 + 148 = 184\n",
+      "------------\n",
+      "loss:0.005889033864799246\n",
+      "Pred:[1 0 0 0 1 1 1 0 0]\n",
+      "Ture:[1 0 0 0 1 1 1 0 0]\n",
+      "215 + 69 = 284\n",
+      "------------\n",
+      "loss:0.0023133627701396094\n",
+      "Pred:[1 0 1 0 0 0 0 0 1]\n",
+      "Ture:[1 0 1 0 0 0 0 0 1]\n",
+      "144 + 177 = 321\n",
       "------------\n"
      ]
     }
    ],
    "source": [
     "# 训练次数\n",
-    "n_epochs = 1\n",
+    "n_epochs = 10000\n",
     "\n",
-    "\n",
-    "for i in range(n_epochs):\n",
+    "for i in range(n_epochs + 1):\n",
     "    # 生成加法问题，除以2， 防止加法溢出\n",
-    "    a_int = 15\n",
-    "#     a_int = np.random.randint(largest_number / 2)\n",
-    "    a = int2binary[a_int]\n",
-    "    b_int = 7\n",
-    "#     b_int = np.random.randint(largest_number / 2)\n",
+    "    a_int = np.random.randint(largest_number / 2)\n",
     "\n",
+    "    b_int = np.random.randint(largest_number / 2)\n",
+    "    if i == 0 or i == n_epochs:\n",
+    "        a_int = 144\n",
+    "        b_int = 177\n",
+    "    \n",
+    "    a = int2binary[a_int]\n",
     "    b = int2binary[b_int]\n",
     "    \n",
     "    c_int = a_int + b_int\n",
@@ -147,11 +207,12 @@
     "    \n",
     "    d = np.zeros_like(c)\n",
     "    \n",
+    "    loss = 0\n",
+    "    \n",
     "    # 训练实例\n",
     "    X = np.array([a, b]).T\n",
     "    y = np.array([c]).T\n",
     "    \n",
-    "    loss = 0\n",
     "    hs = []  #每个步长下的隐含特征 \n",
     "    hs.append(np.zeros((1, hidden1)))\n",
     "    os = [] #每个步长的预测值\n",
@@ -159,11 +220,11 @@
     "    # forward\n",
     "    for t in range(binary_dim):\n",
     "        xt = X[binary_dim - t - 1]  # 反着来\n",
-    "        ht = sigmoid(np.dot(xt, U) + np.dot(hs[-1], V))\n",
+    "        ht = sigmoid(np.dot(xt, U) + np.dot(hs[-1], V)) # +prev_hidden\n",
     "        ot = sigmoid(np.dot(ht, W))\n",
     "        hs.append(ht)\n",
     "        os.append(ot)\n",
-    "        loss += np.abs(ot - y[binary_dim - t - 1])[0][0]\n",
+    "        loss += pow(ot - y[binary_dim - t - 1], 2)[0][0]\n",
     "        \n",
     "        # predict\n",
     "        d[binary_dim - t - 1] = np.round(ot)[0][0]\n",
@@ -219,20 +280,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "    "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "a = int2binary[10]\n",
-    "b = int2binary[11]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
